--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: Faith Olajide | Cybersecurity Portfolio
+description: Cybersecurity & IT Support Specialist | Social Engineering Enthusiast
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
