--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 title: Faith Olajide | Cybersecurity Portfolio
-description: Cybersecurity & IT Support Specialist | Social Engineering Enthusiast
+description: Cybersecurity projects, final papers, and technical work.
+remote_theme: pages-themes/hacker@v0.2.0
+
+plugins:
+  - jekyll-remote-theme
+  - jekyll-seo-tag
+
 show_downloads: true
-google_analytics:
-theme: jekyll-theme-hacker
