--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Faith Olajide | Cybersecurity Portfolio
 description: Cybersecurity projects, final papers, and technical work.
+baseurl: ""
+url: "[https://justfaith98.github.io](https://justfaith98.github.io)"
+
 remote_theme: pages-themes/hacker@v0.2.0
 
 plugins:
