--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: "Faith Olajide"
 description: "Cybersecurity & IT Support Specialist"
+baseurl: ""
+url: "https://justfaith98.github.io"
 
 remote_theme: pages-themes/hacker@v0.2.0
 
