--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,5 @@ description: "Cybersecurity & IT Support Specialist"
 baseurl: ""
 url: "https://justfaith98.github.io"
 
-remote_theme: pages-themes/hacker@v0.2.0
+theme: jekyll-theme-hacker
 
-plugins:
-  - jekyll-remote-theme
