--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: "Faith Olajide"
 description: "Cybersecurity & IT Support Specialist"
 baseurl: ""
 url: "https://justfaith98.github.io"
-show_downloads: true
 
-theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
 
+plugins:
+  - jekyll-remote-theme
